{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "4c15efe9-fe1f-421f-b676-b439fb716e6a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b24abb15-4901-4bd1-bfc3-6382b98c509e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c2e3d835-9d62-4da9-96a7-6716ba00e103",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "7142213d-43a8-409b-94d1-e978121d89a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicSkill",
                    "type": "Button",
                    "id": "2c8ddfb6-c8af-4706-a2a4-e19583c30b3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UltimateSkill",
                    "type": "Button",
                    "id": "0a26ed18-3d81-467e-aa13-2ac43ed5db98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "bb94879f-9ae0-454b-af5a-bc6cf14bdb10",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4071ccbd-e674-4a8f-9d1e-9917d6a2db1c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bb2deacd-84e4-4c7c-971b-1585f20b3895",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "54f10876-3a06-4af8-a96e-d0fb28254a57",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "36b9d361-355d-47ca-8c84-d62b6904c8f2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bea610d3-14e3-49e1-ab82-6380ab83d745",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d53a8c27-c707-4d0f-9be6-4c9c153d53ba",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7816caab-754e-4e13-942c-c6dad7734f82",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e09114d0-c0ef-4093-8f0e-47ecea35fb4e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa83cbeb-d913-4dcc-aef2-fb3ff55bc2ee",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12468fcf-db20-498d-9f77-a766e9eec848",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16d99a76-2b18-4e24-b501-e914c3d7158f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6a2f36e-c501-4d3a-90c9-19ca8e533d4f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UltimateSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "364c519a-f1b5-4077-981b-0d121873c16b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UltimateSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}